--- a/style.css
+++ b/style.css
@@ -93,7 +93,7 @@ body{
 
 header{
     background-color: var(--light-red);
-    padding: 15px;
+    padding: 11px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -107,10 +107,10 @@ header{
     align-items: center;
 }
 .header-images img{
-    max-height: 100px;
+    max-height: 70px;
 }
-.height-60{
-    max-height: 60px !important;
+.height-40{
+    max-height: 40px !important;
 }
 
 /* ------------------Section Overview------------ */
@@ -154,7 +154,7 @@ header{
 }
 
 .number-loaded{
-    font-size: 25px;
+    font-size: 21px;
     font-weight: 600;
     margin-top: 20px;
 }
@@ -173,12 +173,12 @@ header{
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
-    margin: 50px 0px;
+    margin: 30px 0px;
     width: 90%;
 }
 .pokemon-card{
-    height: 440px;
-    width: 314px;    
+    height: 350px;
+    width: 250px;    
     position: relative;
     margin: 15px;
     cursor: pointer;
@@ -188,8 +188,8 @@ header{
     transform: scale(1.08);
 }
 .pokemon-card-bg{
-    height: 440px;
-    width: 314px;
+    height: 350px;
+    width: 250px;
     object-fit: contain;
     border-radius: 15px;
     box-shadow: 0px 5px 10px var(--shadow);
@@ -199,7 +199,7 @@ header{
 .pokemon-card-content{
     color: rgb(63, 63, 63);
     font-weight: 400;
-    font-size: 23px;
+    font-size: 17px;
     position: absolute;
     inset: 0;
     display: flex;
@@ -209,50 +209,50 @@ header{
 }
 .pokemon-image{
     position: absolute;
-    top: 54px;
-    height: 155px;
+    top: 44px;
+    height: 120px;
 }
 .pokemon-name{
-    font-size: 30px;
+    font-size: 25px;
     font-weight: 900;
     position: absolute;
-    top: 230px;
+    top: 180px;
     text-transform:capitalize;      
 }
 .pokemon-stats-container{    
     position: absolute;
-    top:273px;
+    top:218px;
     display: flex;    
 }
 .pokemon-stat-title{
     border-top: 1px solid gray;
     border-right: 1px solid gray;
     margin-bottom: 4px;
-    padding-right: 20px;
+    padding-right: 10px;
     padding-left: 10px;
 }
 .pokemon-stat{
     border-top: 1px solid gray;
     margin-bottom: 4px;
-    padding-left: 20px;
+    padding-left: 10px;
     padding-right: 10px;
 }
 .stat-exp{
-    font-weight: 900;
+    font-weight: 800;
 }
 .poke-number{
-    font-size: 30px;
+    font-size: 23px;
     font-weight: 900;
     position: absolute;
-    top: 370px;
-    right: 65px;
+    top: 295px;
+    right: 50px;
 }
 
 
 /* Button More */
 .button-more-poke-container button{
     background-color: var(--light-red);
-    font-size: 25px;
+    font-size: 20px;
     font-weight: 100;
     padding: 10px;
     border: 1px solid gray;
@@ -266,9 +266,9 @@ header{
 /* Arrow Up */
 .arrow-up-container{
     background-color: var(--light-red);
-    width: 70px;
-    height: 70px;
-    font-size: 50px;
+    width: 50px;
+    height: 50px;
+    font-size: 35px;
     position: fixed;
     right: 40px;
     bottom: 40px;
@@ -280,8 +280,7 @@ header{
     animation: fadeIn 300ms;
 }
 .fa-arrow-up::before{
-    content: '\f062';  
-     
+    content: '\f062';       
 }
 
 
@@ -307,36 +306,33 @@ header{
     to{ opacity: 1; transform: scale(1)}    
 }
 
-.icons-lightbox{
-    height: 70px;
-}
 .pokedex-img{
-    min-height: 870px;
+    min-height: 550px;
 }
 
 
 .pokemon-img{
-    width: 360px;
-    height: 410px;
+    width: 235px;
+    height: 263px;
     position: absolute;
-    top: 280px;
-    left: 118px;
+    top: 174px;
+    left: 68px;
 }
 .pokedex-stats-container{
     color: rgb(0, 48, 0,.9);
     font-family: 'Consolas',Arial;
     font-weight: 800;
-    font-size: 40px;
+    font-size: 25px;
     position: absolute;
-    top: 290px;
-    left: 723px;
+    top: 167px;
+    left: 446px;
     display: flex;
 }
 .pokedex-stats-container div{
-    line-height: 50px;
+    line-height: 35px;
 }
 .pokedex-stats-title{
-    margin-right: 20px;
+    margin-right: 10px;
 }
 .pokedex-name{
     text-transform: capitalize;
@@ -345,7 +341,8 @@ header{
 /* Progress-bar */
 .stat-progress-container{    
     border: 1px solid green;
-    width: 200px;
+    width: 150px;
+    height: 33px;
 }
 .stat-progress{
     background-color: green;
@@ -360,8 +357,8 @@ header{
 }
 .close-btn-container{
     background-color: var(--red);
-    width: 70px;
-    height: 70px;
+    width: 50px;
+    height: 50px;
     border: 3px solid black;
     border-radius: 50%;
     position: absolute;
@@ -376,7 +373,7 @@ header{
 .fa-times::before{
     color: white;
     -webkit-text-stroke: 3px black;
-    font-size: 60px;
+    font-size: 45px;
     content: '\f00d';
     transition: color 200ms ease-in-out;
 }
@@ -391,31 +388,31 @@ header{
 /* Buttons continue */
 .buttons-continue{
     background-color: var(--green);
-    width: 70px;
-    height: 70px;
+    width: 50px;
+    height: 50px;
     border: 3px solid black;
     border-radius: 50%;
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 0px 20px;
+    margin: 0px 10px;
     cursor: pointer;
     transition: background-color 200ms ease-in-out;
 }
-.fa-arrow-left::before{
-    color: white;
-    -webkit-text-stroke: 3px black;
-    font-size: 60px;
-    content: '\f060';
-    transition: color 200ms ease-in-out;
-}
+.fa-arrow-left::before,
 .fa-arrow-right::before{
     color: white;
     -webkit-text-stroke: 3px black;
-    font-size: 60px;
-    content: '\f061';
+    font-size: 45px;    
     transition: color 200ms ease-in-out;
 }
+.fa-arrow-left::before{
+    content: '\f060';
+}
+.fa-arrow-right::before{    
+    content: '\f061';    
+}
+
 .buttons-continue:hover{
     background-color: white;
 }
@@ -429,19 +426,19 @@ header{
 
 footer{
     background-color: var(--light-green);
-    height: 100px;
+    height: 60px;
     color: #707070;    
     display: flex;    
     justify-content: center;          
     box-shadow: 0px 0px 10px var(--shadow);
-    padding: 20px;
+    padding: 10px;
 }
 .copyright{
-    font-size: 25px;
+    font-size: 18px;
     height: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: space-evenly;
     align-items: center;
 }
 .copyright a{
