--- a/style.css
+++ b/style.css
@@ -157,6 +157,7 @@ header{
     font-size: 21px;
     font-weight: 600;
     margin-top: 20px;
+    text-align: center;
 }
 
 .no-search-result{
@@ -169,7 +170,17 @@ header{
 #Loading{
     font-size: 30px;
     font-weight: 600;
-    margin: 50px 5px;
+    margin: 15px 5px;
+}
+.rotate{
+    animation: rotation 1s infinite linear;
+}
+@keyframes rotation{
+    from{
+        transform: rotate(0deg);
+    }to{
+        transform: rotate(360deg);
+    }
 }
 
 /* Pokemon Cards */
@@ -178,7 +189,7 @@ header{
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
-    margin: 30px 0px;
+    margin: 30px 0px 0px 0px;
     width: 90%;
 }
 .pokemon-card{
@@ -221,12 +232,12 @@ header{
     font-size: 25px;
     font-weight: 900;
     position: absolute;
-    top: 180px;
+    top: 181px;
     text-transform:capitalize;      
 }
 .pokemon-stats-container{    
     position: absolute;
-    top:218px;
+    top:219px;
     display: flex;    
 }
 .pokemon-stat-title{
@@ -253,6 +264,11 @@ header{
     right: 50px;
 }
 
+@media(max-width: 1300px){
+    .pokemon-cards-container{
+        width: 100%;
+    }
+}
 
 /* Button More */
 .button-more-poke-container button{
@@ -260,6 +276,7 @@ header{
     font-size: 20px;
     font-weight: 100;
     padding: 10px;
+    margin-top: 15px;
     border: 1px solid gray;
     border-radius: 10px;
     cursor: pointer;    
