--- a/style.css
+++ b/style.css
@@ -329,7 +329,7 @@ header{
 }
 
 .pokedex-img{
-    min-height: 550px;
+    height: 550px;
 }
 
 
@@ -362,7 +362,7 @@ header{
 
 /* Progress-bar */
 .stat-progress-container{    
-    border: 1px solid green;
+    /* border: 1px solid green; */
     width: 150px;
     height: 33px;
 }
@@ -442,6 +442,120 @@ header{
 .buttons-continue:hover .fa-arrow-right::before{
     color: var(--green);
 }
+
+@media(max-width: 900px){
+    .pokedex-img{
+        height: 380px;
+    }
+    .pokemon-img {
+        width: 170px;
+        height: 199px;        
+        top: 113px;
+        left: 45px;
+    }
+    .pokedex-stats-container {        
+        font-size: 18px;        
+        top: 120px;
+        left: 318px;       
+    }
+    .pokedex-stats-container div {
+        line-height: 24px;
+    }
+    .stat-progress-container {        
+        width: 94px;
+        height: 24px;
+    }
+    .buttons-continue{        
+        width: 40px;
+        height: 40px;
+        border: 2px solid black;        
+    }
+    .fa-arrow-left::before,
+    .fa-arrow-right::before{
+        -webkit-text-stroke: 2px black;
+        font-size: 35px;            
+    }
+    .close-btn-container{        
+        width: 40px;
+        height: 40px;
+        border: 2px solid black;        
+    }
+    .fa-times::before{        
+        -webkit-text-stroke: 2px black;
+        font-size: 35px;       
+    }
+}
+
+@media(max-width: 650px){
+    .pokedex-img{
+        height: 280px;
+    }
+    .pokemon-img {
+        width: 123px;
+        height: 145px;
+        top: 84px;
+        left: 35px;
+    }
+    .pokedex-stats-container {        
+        font-size: 14px;        
+        top: 83px;
+        left: 228px;       
+    }
+    .pokedex-stats-container div {
+        line-height: 19px;
+    }
+    .stat-progress-container {               
+        width: 70px;
+        height: 19px;
+    }    
+}
+
+@media(max-width: 500px){
+    .pokedex-img{
+        height: 200px;
+    }
+    .pokemon-img {
+        width: 88px;
+        height: 98px;
+        top: 63px;
+        left: 25px;
+    }
+    .pokedex-stats-container {        
+        font-size: 11px;        
+        top: 63px;
+        left: 162px;       
+    }
+    .pokedex-stats-container div {
+        line-height: 13px;
+    }
+    .stat-progress-container {              
+        width: 44px;
+        height: 13px;
+    }
+    .buttons-continue{        
+        width: 22px;
+        height: 22px;
+        border: 1px solid black;    
+        margin: 0px 5px;    
+    }
+    .fa-arrow-left::before,
+    .fa-arrow-right::before{
+        -webkit-text-stroke: 1px black;
+        font-size: 20px; 
+                   
+    }
+    .close-btn-container{        
+        width: 22px;
+        height: 22px;
+        border: 1px solid black;        
+    }
+    .fa-times::before{        
+        -webkit-text-stroke: 1px black;
+        font-size: 20px;       
+    }
+}
+
+
 
 
 /* ------------------------Footer----------- */
